#####################################################################
CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
PROJECT( Projeto_Maracatronics )
#####################################################################
FIND_PACKAGE( OpenCV 4.1.2 REQUIRED )
#####################################################################
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
#####################################################################
ADD_EXECUTABLE(	main
				main.cpp )
#####################################################################
TARGET_LINK_LIBRARIES( main ${OpenCV_LIBRARIES} )
#####################################################################